testsuite/tests/linear/should_fail/TypeClass.stderr

TypeClass.hs:45:7: error:
    • No instance for (Iden (FUN 'One)) required by a use of ‘iden’
    • In the expression: iden
      In an equation for ‘foo’: foo = iden
